--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="Lorem Ipsum Photography">
+    <meta content="Lorem Ipsum Photography">
+    <meta name="robots" content="index,follow">
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="">
+    <title>Lorem Ipsum Photography</title>
 </head>
 <body>
     
