added hero section

--- a/index.html
+++ b/index.html
@@ -12,6 +12,27 @@
     <title>Lorem Ipsum Photography</title>
 </head>
 <body>
-    
+    <header class="main-head">
+        <nav>
+            <h1 id="logo">Lorem Ipsum Photography</h1>
+            <ul class="nav-links">
+                <li><a href="#about">About</a></li>
+                <li><a href="#work">Work</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="hero">
+            <div class="div hero-introduction">
+                <h2>Lorem Ipsum <br>Photography</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime animi veniam fugiat, in tempore aliquam neque quas autem fuga iusto.</p>
+                <a href="#gallery">Gallery</a>
+            </div>
+            <div class="hero-images">
+                <img hero="lorem" src="/img/lorem.jpeg" alt="picture of lorem">
+            </div>
+        </section>
+    </main>
 </body>
 </html>
