--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     </header>
     <main>
         <section class="hero">
-            <div class="div hero-introduction">
+            <div class="hero-introduction flex">
                 <h2>Lorem Ipsum <br>Photography</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime animi veniam fugiat, in tempore aliquam neque quas autem fuga iusto.</p>
                 <a href="#gallery">Gallery</a>
             </div>
             <div class="hero-images">
-                <img hero="lorem" src="/img/lorem.jpeg" alt="picture of lorem">
+                <img class="hero-lorem" src="/img/lorem-ipsum.jpeg" alt="picture of lorem">
             </div>
         </section>
     </main>
