added portrait, landscape, and footer sections

--- a/index.html
+++ b/index.html
@@ -11,28 +11,46 @@
     <link rel="icon" href="">
     <title>Lorem Ipsum Photography</title>
 </head>
-<body>
+<body class="body">
     <header class="main-head">
         <nav>
-            <h1 id="logo">Lorem Ipsum Photography</h1>
+            <a href="#hero-section"><h1 id="logo">Lorem Ipsum Photography</h1></a>
             <ul class="nav-links">
-                <li><a href="#about">About</a></li>
-                <li><a href="#work">Work</a></li>
+                <li><a href="#portraits-section">Portraits</a></li>
+                <li><a href="#landscapes-section">Landscapes</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
-    <main>
-        <section class="hero">
-            <div class="hero-introduction flex">
-                <h2>Lorem Ipsum <br>Photography</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime animi veniam fugiat, in tempore aliquam neque quas autem fuga iusto.</p>
-                <a href="#gallery">Gallery</a>
-            </div>
-            <div class="hero-images">
-                <img class="hero-lorem" src="/img/lorem-ipsum.jpeg" alt="picture of lorem">
-            </div>
+    <main class="main">
+        <section class="hero-section" id="hero-section">
+            <img class="hero-lorem" src="/img/hero.jpeg" alt="picture of man standing in field">
+        </section>
+        <section id="portraits-section" Class="portraits-section">
+            <img class="portrait1" src="/img/portrait1.jpeg" alt="">
+            <img class="portrait2" src="/img/portrait2.jpeg" alt="">
+            <img class="portrait3" src="/img/portrait3.jpeg" alt="">
+            <img class="portrait5" src="/img/portrait5.jpeg" alt="">
+            <img class="portrait6" src="/img/portrait6.jpeg" alt="">
+            <h2 class="portrait-text">Capture the<br>Mood</h2>
+        </section>
+        <section id="landscapes-section" Class="landscape-section">
+            <img class="landscape" src="/img/landscape.jpeg" alt="">
+            <img class="landscape2" src="/img/landscape2.jpeg" alt="">
+            <img class="landscape3" src="/img/landscape3.jpeg" alt="">
+            <img class="landscape4" src="/img/landscape4.jpeg" alt="">
+            <h2 class="landscape-text">Moments in<br>Time</h2>
+        </section>
+        <section id="contact-section">
+            <img src="" alt="">
         </section>
     </main>
+    <footer class="footer">
+        <div class="social-media">
+            <a href="" class="facebook"></a>
+            <a href="" class="instagram"></a>
+        </div>
+        <p class="copyright">Copyright</p>
+    </footer>
 </body>
 </html>
