--- a/index.html
+++ b/index.html
@@ -60,13 +60,14 @@
         </section>
     </main>
     <footer class="footer">
+        <p class="copyright">Copyright Lorem Ipsum 2021</p>
         <div class="social-media">
             <ul>
-                <li><a href="" class="facebook"></a></li>
-                <li><a href="" class="instagram"></a></li>
+                <li><a target="_blank" href="https://twitter.com/" class="twitter"><img src="/icn/twitter 1.svg" alt=""></a></li>
+                <li><a target="_blank" href="https://www.instagram.com/" class="instagram"><img src="/icn/instagram 1.svg" alt=""></a></li>
+                <li><a target="_blank" href="https://www.youtube.com/" class="YouTube"><img src="/icn/youtube-symbol 1.svg" alt=""></a></li>
             </ul>
         </div>
-        <p class="copyright">Copyright</p>
     </footer>
 </body>
 </html>
